--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
         "tslint": "~5.11.0",
         "typescript": "~3.5.3"
     },
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "license": "MIT"
 }
