--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.3",
     "author": {
         "name": "Gilles Fabre",
-        "url": "http://gillesfabre.com/"
+        "url": "https://github.com/gillesfabre34"
     },
     "scripts": {
         "test": "karma start karma.conf.js"
